# cwtwb

./: .env.example  .gitignore  AUTO_LAYOUT_CHANGES.md  CHANGELOG.md  LICENSE  README.md  Tableau 看板生成 MCP —— 新方案 v4.md  dashboard_structure.txt  mcp.json  pyproject.toml  tmp_dump.py
docs/: ROADMAP.md  design-v3.md  fix-suggestions.md  guide.md  guided_mcp_authoring_run_v1_zh.md  tableau-validation-api.md  tableau_agent.md
examples/: README.md  all_supported_charts.py  demo_auto_layout.py  demo_connections.py  demo_declarative_layout.py  hyper_and_new_charts.py
examples/agentic_mcp_authoring/: Executive Overview correct.twb  Executive Overview.twb  Executive_Dashboard.twb  Executive_Dashboard_V2.twb  Executive_Overview.twb  Executive_Overview_v2.twb  Executive_Overview_v3.twb  Executive_Overview_v5 correct.twb  README.md  demo_guided_authoring_mcp_client.py  demo_human_prompt_zh.md  demo_mcp_client_prompt_zh.md  draft_contract.json  expected_review_result.json  mcp_walkthrough.md  user_brief.md
examples/layouts/: layout_c1.json  layout_c2.json  layout_executive.json
examples/migrate_workflow/: README.md  test_migration_workflow.py  示例 - 超市.xls
examples/profiles/: superstore.json
examples/prompts/: README.md  all_supported_charts_showcase_en.md  demo_simple.md  (+12 more)
scripts/: publish_from_env.ps1
tests/: README.md  parse_twb.py  test_agentic_authoring_v1.py  test_c2_replica.py  test_capability_registry.py  test_chart_routing.py  test_charts.py  test_connections.py  test_dashboard_action_types.py  test_dashboard_actions.py  test_declarative_dashboards.py  test_diff.py  test_dual_axis_advanced.py  test_dual_axis_basic.py  test_dual_axis_script.py  test_e2e.py  test_field_registry.py  test_generate_pie.py  test_hyper_example.py  test_interactive_features.py  test_label_runs.py  test_layout_ascii.py  test_level1_features.py  test_mcp_showcase_workbook.py  test_mcp_tools.py  test_migration_workflow.py  test_overview_full.py  test_overview_replica.py  test_screenshot2layout.py  test_template_datasource_structure.py  test_twb_analyzer.py  test_twb_structure.py  test_worksheet_refactor.py  test_worksheet_style.py
(+77 files in other folders)
