[project]
name = "cwtwb"
version = "0.18.4"
description = "Tableau Workbook (.twb) generation toolkit and MCP server"
readme = "README.md"

requires-python = ">=3.10"
keywords = ["tableau", "twb", "mcp", "visualization", "workbook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "lxml>=5.0",
    "mcp[cli]>=1.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "mypy>=1.10",
]
examples = [
    "tableauhyperapi>=0.0.21408",
]

[project.scripts]
cwtwb = "cwtwb.server:main"

[project.urls]
Homepage = "https://github.com/imgwho/cwtwb"
Changelog = "https://github.com/imgwho/cwtwb/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling<1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build]

[tool.hatch.build.targets.wheel]
packages = ["src/cwtwb"]
# All non-Python files under src/cwtwb/ (skills/*.md, references/*) are
# git-tracked and included in the wheel automatically via `packages`.
# The Tableau XSD schema is mirrored into src/cwtwb/vendor at build time so
# installed/uvx environments can validate workbooks without a repository vendor
# checkout.

[tool.hatch.build.targets.wheel.force-include]
"vendor/tableau-document-schemas/schemas/2026_1" = "cwtwb/vendor/tableau-document-schemas/schemas/2026_1"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.env",
  "/.venv",
  "/venv/",
  "/env/",
]

[tool.hatch.build.targets.sdist.force-include]
"vendor/tableau-document-schemas/schemas/2026_1" = "vendor/tableau-document-schemas/schemas/2026_1"

[tool.pytest.ini_options]
testpaths = ["tests"]
